@@ -5,6 +5,7 @@
   -added child trade sequence
   -added adult trade sequence
   -changed goron tunic as sequence breakable for fire trial
+  -changed shops with tunics only show on adult map
 1.0.0.6:
   -fixed Shadow Temple having 1 free item too much
   -changed free item counters to go upwards so the dungeon gets cleared if you have them all
